<resources>

    <string name="app_name">Team 2.06 ToDo-List</string>
    <string name="Todo_heading">To-Do List</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ToDo List</string>
    <string name="title_activity_login">Welcome</string>
    <string name="title_activity_Signup">Sign up</string>
    <string name="title_activity_help">Help</string>
    <string name="title_main_editText_hint">Please enter item</string>
    <string name="main_btn_add">Add</string>
    <string name="main_btn_help"> i </string>
    <string name="main_btn_help_text">This applicaton is built in order to help you maintain your To-Do lists. With this application, you can add, delete and edit your list. There is also a preference order that will be maintained so that you can watch them in the priority that you wish to.</string>
	<string name="login_page_txt_usrname">Username</string>
	<string name="login_page_txt_pass">Password</string>
	<string name="login_page_txt_usrname_hint">Username</string>
	<string name="login_page_txt_pass_hint">Password</string>
	<string name="login_page_txt_email">Email</string>
	<string name="login_page_txt_email_hint">eg. james@gmail.com</string>
	<string name="btn_login">Login</string>
	<string name="txt_new_user">New to ToDoList?</string>
	<string name="btn_new_user">Create an account</string>
	<string name="main_txt_Todo">ToDo</string>
	<string name="main_txt_due_date">Due Date</string>
	<string name="main_txt_Priority">Priority</string>
	<string name="main_btn_delete">Delete</string>
	<string name="main_txt_hide">Hide</string>
	<string name="signup_heading">Please fill in the details.</string>
	<string name="txt_cancel">Cancel</string>
</resources>