<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_background">

<RelativeLayout android:id="@+id/main_rel_layout"
     android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_dark">
      <TextView
        android:id="@+id/txt_main_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_txt_Todo" 
        android:textColor="@android:color/white"
        android:layout_marginLeft="70dp"
        android:textStyle="bold"/>
     <TextView
        android:id="@+id/txt_main_dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txt_due_date" 
        android:textColor="@android:color/white"
        android:layout_toLeftOf="@+id/txt_main_priority"
        android:textStyle="bold"/>
     
       <TextView
        android:id="@+id/txt_main_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_txt_Priority" 
        android:textColor="@android:color/white"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"/>
     </RelativeLayout>
      
    <ListView
        android:id="@+id/main_listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#eeeee0"
        android:drawSelectorOnTop="false" 
        android:layout_below="@+id/main_rel_layout">

            </ListView>
            
    <RelativeLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_alignParentBottom="true"
    android:background="@android:color/background_dark"
    android:paddingTop="10dp">
            
            <Button 
                   android:id="@+id/btn_main_delete"
                  android:text="@string/main_txt_hide"
                  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:paddingLeft="50dp" 
                    android:paddingRight="50dp"
                    android:layout_marginLeft="20dp">
              </Button>

              <Button 
                   android:id="@+id/btn_hide"
                  android:text="@string/main_btn_delete"
                  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                    android:textColor="@android:color/black" 
                    android:layout_alignParentRight="true"
                    android:paddingLeft="50dp" 
                    android:paddingRight="50dp"
                    android:layout_marginRight="20dp">
              </Button>
            
    </RelativeLayout>
                      
</RelativeLayout>